title and main texts alignment fixed

--- a/src/App.css
+++ b/src/App.css
@@ -78,6 +78,16 @@
     margin: 8px;
 }
 
+.p {
+    text-indent: 25px;
+}
+
+.text_div {
+    text-align: left;
+    width: 400px;
+    margin: 0 auto;
+}
+
 @media only screen and (max-width: 960px) {
     .footer > div {
         width: 100%;
@@ -85,6 +95,12 @@
 
     .footer_text {
         text-align: center;
+    }
+}
+
+@media only screen and (max-width: 888px) {
+    .text_div {
+        width: auto;
     }
 }
 
